--- a/platformio.ini
+++ b/platformio.ini
@@ -43,7 +43,8 @@ framework = arduino
 monitor_speed = 115200
 upload_speed = 115200
 ; Uncomment this line to allow for remote upgrade. If name resolution does not work for you, replace with the IP of ESPAltherma
-upload_port = ESPAltherma.local
+; upload_port = ESPAltherma.local
+upload_port = 192.168.0.159
 ; Uncomment this line if you want to define the protocol. Autodetected otherwise.
 ; upload_protocol = espota
 
